--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>»»»</title>
+    <link rel="stylesheet" href="style.css">
+    <title>⌆</title>
 </head>
 <body>
-    
+    <p>man</p>
 </body>
 </html>
