--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>⌆</title>
 </head>
 <body>
-    <p id="title">hello</p>
+    <div id="scr" class="title"></div>
+    <script src="main.js"></script>
 </body>
 </html>
