--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>⌆</title>
+    <link href="https://pvinis.github.io/iosevka-webfont/3.4.1/iosevka.css" rel="stylesheet" />
+    <title>jjonojj</title>
 </head>
 <body>
-    <div id="scr" class="title"></div>
+    <h1>hi!</h1>
+
+    i am jonas, i live in austria and attend the htl in villach.
+    <hr>
+    things that i like and software that i use (in no particular order):
+    <ul>
+        <li>linux</li>
+        <li>hyprland</li>
+        <li>rust</li>
+        <li>valve</li>
+        <li>tofi</li>
+        <li>the zed editor</li>
+        <li>the status bar of dwm</li>
+        <li>fluxbox</li>
+        <li>the quake 1 asthetic</li>
+        <li>windows vista</li>
+    </ul>
+
+    <!-- js -->
     <script src="main.js"></script>
 </body>
 </html>
