--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>hi!</h1>
 
-    i am jonas, i live in austria and attend the htl in villach.
+    i am jonas, i live in austria and i like to code sometimes.
     <hr>
     things that i like and software that i use (in no particular order):
     <ul>
