--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <li>windows vista</li>
     </ul>
 
+    <div id="color">#7287fd</div>
+
     <!-- js -->
     <script src="main.js"></script>
 </body>
